RESOLVED FIXED211745
Fix possible crash in ViewGestureController on macOS
https://bugs.webkit.org/show_bug.cgi?id=211745
Summary Fix possible crash in ViewGestureController on macOS
Simon Fraser (smfr)
Reported 2020-05-11 13:59:01 PDT
Fix possible crash in ViewGestureController on macOS
Attachments
Patch (2.00 KB, patch)
2020-05-11 14:00 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-05-11 14:00:22 PDT
EWS
Comment 2 2020-05-11 15:13:06 PDT
Committed r261495: <https://trac.webkit.org/changeset/261495> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399054 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-11 15:14:17 PDT
Note You need to log in before you can comment on or make changes to this bug.