Fix possible crash in ViewGestureController on macOS https://bugs.webkit.org/show_bug.cgi?id=211745

Reviewed by Tim Horton.

When ViewGestureController::resetState() clears m_swipeCancellationTracker, it should set it to canceled so that
any pending -trackSwipeEventWithOptions:... which is holding a reference to the WKSwipeCancellationTracker knows
to stop.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::resetState):
(WebKit::ViewGestureController::reset):


Canonical link: https://commits.webkit.org/224641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261495 268f45cc-cd09-0410-ab3c-d52691b4dbfc